# VocalTractLab-dev

./: .gitignore  .gitmodules  Acoustic3dPage.cpp  Acoustic3dPage.h  AnalysisResultsDialog.cpp  AnalysisResultsDialog.h  AnalysisSettingsDialog.cpp  AnalysisSettingsDialog.h  AnatomyParamsDialog.cpp  AnatomyParamsDialog.h  AnnotationDialog.cpp  AnnotationDialog.h  Application.cpp  Application.h  AreaFunctionPicture.cpp  AreaFunctionPicture.h  BasicPicture.cpp  BasicPicture.h  CMakeLists.txt  CMakeSettings.json  CODEOWNERS  ColorScale.cpp  ColorScale.h  CrossSectionPicture.cpp  CrossSectionPicture.h  Data.cpp  Data.h  EmaConfigDialog.cpp  EmaConfigDialog.h  FdsOptionsDialog.cpp  FdsOptionsDialog.h  FormantOptimizationDialog.cpp  FormantOptimizationDialog.h  GesturalScorePage.cpp  GesturalScorePage.h  GesturalScorePicture.cpp  GesturalScorePicture.h  GlottisDialog.cpp  GlottisDialog.h  GlottisPanel.cpp  (+79 more)
.github/: msbuild.yml
.github/workflows/: cmake.yml  cmake_linux.yml  cmake_osx.yml  cmake_windows.yml  msbuild.yml
Examples/: example02.seg  example03.seg  example04.ges  example04.seg  example05.ges  example05.seg  example06.ges  example06.seg
doc/: biblio.bib  minimal_csv_geometry.csv  user_guide_vtl3d.tex
resources/: JD3.speaker
resources/examples/: apfelsine.seg  example02.ges  example03.ges
src/: AnalysisResultsDialog.cpp  AnalysisResultsDialog.h  AnalysisSettingsDialog.cpp  AnalysisSettingsDialog.h  AnatomyParamsDialog.h  AnnotationDialog.h  Application.cpp  Application.h  AreaFunctionPicture.cpp  AreaFunctionPicture.h  BasicPicture.cpp  ColorScale.cpp  CrossSectionPicture.cpp  Data.cpp  Data.h  EmaConfigDialog.cpp  EmaConfigDialog.h  FdsOptionsDialog.cpp  FormantOptimizationDialog.cpp  FormantOptimizationDialog.h  GesturalScorePage.cpp  GesturalScorePage.h  GesturalScorePicture.cpp  GesturalScorePicture.h  GlottisDialog.cpp  GlottisPanel.cpp  GlottisPanel.h  GlottisPicture.cpp  GlottisPicture.h  Graph.cpp  Graph.h  LfPulseDialog.h  LfPulsePicture.cpp  LfPulsePicture.h  MainWindow.cpp  PhoneticParamsDialog.cpp  PoleZeroDialog.cpp  PoleZeroDialog.h  PoleZeroPlot.cpp  PoleZeroPlot.h  (+31 more)
validation/cone_division/: generate_geometry.m  param_1cone.csv  param_1cone_reversed.csv  param_2cone.csv  param_2cone_reversed.csv  plot_tfs.m
validation/elephant_trunk/: elephant_ac_press_MM.txt  elephant_ac_press_MM_p0.txt  elephant_ac_press_MM_p0_mn_17_nPt_200_d_30.txt  elephant_ac_press_MM_p0_mn_32_nPt_200_d_30.txt  elephant_ac_press_MM_p0_mn_53_nPt_100_d_30.txt  elephant_ac_press_MM_p0_mn_53_nPt_200_d_10.txt  elephant_ac_press_MM_p0_mn_53_nPt_200_d_20.txt  elephant_ac_press_MM_p0_mn_53_nPt_200_d_30.txt  elephant_ac_press_MM_p0_mn_53_nPt_25_d_30.txt  elephant_ac_press_MM_p0_mn_53_nPt_50_d_30.txt  elephant_ac_press_MM_p0_mn_6_nPt_200_d_30.txt  elephant_compare_FEM_MM.m  elephant_p0_out_3D.mat  elephant_p0_stabilized_out_3D.mat  elephant_rad_out_3D.mat  elephant_radbig_coarse_out_3D.mat  mesh_density.xlsx  number_of_integration_pts.xlsx  number_of_modes.xlsx
validation/junction_simple_cones/: README.txt  data_junction_simple_cones.mat  generate_geometry.m  junction_simple_cones.py  junction_simple_cones_0_002.geo  junction_simple_cones_field.py  param_junction_simple_cones.csv  plot_field_junction_simple_cones.m  plot_tfs_junction_simple_cones.m  run_FEM.sh  tfFEM.txt
validation/junction_simple_cones/extracted_field/: p_center_line_imag_2500.csv  p_center_line_real_2500.csv
validation/junction_simple_cones_reversed/: data_junction_simple_cones_reversed.mat  generate_geometry.m  param_junction_simple_cones_reversed.csv  plot_field_junction_simple_cones_reversed.m  plot_tfs_junction_simple_cones_reversed.m
validation/shifted_cone/: README.txt  data_shifted_cone.mat  param_shifted_cone.csv  plot_tfs_shifted_cone.m  run_FEM.sh  shifted_cone.geo  shifted_cone.py
validation/simple_cone/: README.txt  cone_0_001.geo  data_simple_cone.mat  param_test_geo.csv  plot_simple_cone_field.m  plot_tfs_simple_cone.m  run_FEM.sh  simple_cone.py  simple_cone_field.py  tfFEM.txt
validation/simple_cone/extracted_field/: p_imag_centerline.csv  p_imag_centerline_2500.csv  p_real_centerline.csv  p_real_centerline_2500.csv
validation/sound_source/experiment/: generate_sound_source_geometry.m
validation/vowels/: JD2.speaker  a_f.txt  a_f_a.txt  a_f_fem.mat  a_f_st.txt  a_m.txt  a_m_a.txt  a_m_a_20.txt  a_m_a_30.txt  a_m_a_40.txt  a_m_a_50.txt  a_m_a_60.txt  a_m_fem.mat  a_m_st.txt  i_f.txt  i_f_a.txt  i_f_fem.mat  i_f_st.txt  i_m.txt  i_m_a.txt  i_m_a_20.txt  i_m_a_30.txt  i_m_a_40.txt  i_m_a_50.txt  i_m_a_60.txt  i_m_fem.mat  i_m_st.txt  plot_vowels.m  resonances.xlsx  schwa_f.txt  schwa_f_a.txt  schwa_f_fem.mat  schwa_f_st.txt  schwa_m.txt  schwa_m_a.txt  schwa_m_fem.mat  schwa_m_st.txt  u_f.txt  u_f_a.txt  u_f_fem.mat  (+11 more)
